LoyaltyPlusRewardsMicroserviceApp/PointsManagementAPI/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: points-management-service
spec:
  selector:
    app: points-management
    app.kubernetes.io/name: points-management
  ports:
    - protocol: TCP
      port: 80 # for other pods/services in the cluster
      targetPort: 8080 # port of container in the pods
      nodePort: 32002 # external traffic
  type: NodePort
