LoyaltyPlusRewardsMicroserviceApp/PointsManagementAPI/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: points-management-vs
spec:
  hosts:
    - points-management-service.default.svc.cluster.local
  http:
    - route:
        - destination:
            host: points-management-service.default.svc.cluster.local
            port:
              number: 80
      retries:
        attempts: 3
        perTryTimeout: 2s
